fix when sort indicator is shown in list header

When starting a new search in the package list, and the list is sorted
by name, then the results are sorted by relevancy and the indicator is
hidden. Clicking on a column header changes the order wrt the selected
column.

Testing Done:
Test 1
------

* Click on 'Status' header
* Search for 'fri' (gives meaningful result to see the order)
* Result is sorted by status and then by name

Test 2
------

* Clear search string, click on 'Package' header
* Search for 'fri'
* Sort indicator is hidden, result is sorted by relevancy
* Click on a header
* Result is order by selected column, indicator is shown
* Continue writing in search string, 'fritz'
* Result is still ordered by column
* Clearing search string and fill it again
* Search result is sorted by relevancy

BUG: 313596
REVIEW: 129904